--- a/cems-api.yml
+++ b/cems-api.yml
@@ -79,6 +79,7 @@ paths:
           description: "Access token was authenticated but not authorized for this feature"
         404:
           description: "Company not found"
+          
   /company/{company_id}/assignments/incomplete/metadata:
     get:
       tags:
@@ -103,6 +104,7 @@ paths:
           description: "Access token was authenticated but not authorized for this feature"
         404:
           description: "Company not found"
+          
   /company/{company_id}/access_level/{access_level_constant}/courses:
     get:
       tags:
@@ -183,6 +185,7 @@ paths:
           description: "Access token was authenticated but not authorized for this feature"
         404:
           description: "Company not found"
+          
   /company/{company_id}/corpadminreport:
     get:
       tags:
@@ -207,6 +210,7 @@ paths:
           description: "Access token was authenticated but not authorized for this feature"
         404:
           description: "Company not found"
+          
   /company/{company_id}/course_type:
     get:
       tags:
@@ -231,6 +235,7 @@ paths:
           description: "Access token was authenticated but not authorized for this feature"
         404:
           description: "Company not found"
+          
   /company/{company_id}/courses:
     get:
       tags:
@@ -301,6 +306,7 @@ paths:
           description: "Access token was not authenticated"
         403:
           description: "Access token was authenticated but not authorized for this feature"
+          
   /company/{company_id}/filteredreport:
     get:
       tags:
@@ -335,6 +341,7 @@ paths:
           description: "Access token was authenticated but not authorized for this feature"
         404:
           description: "Company not found"
+          
   /company/{company_id}/filterset:
     get:
       tags:
@@ -359,6 +366,7 @@ paths:
           description: "Access token was authenticated but not authorized for this feature"
         404:
           description: "Company not found"
+          
   /company/{company_id}/instructional_level:
     get:
       tags:
@@ -474,6 +482,7 @@ paths:
           description: "Access token was authenticated but not authorized for this feature"
         404:
           description: "Company or resource not found"
+          
   /company/{company_id}/supervisingusers:
     get:
       tags:
@@ -518,6 +527,7 @@ paths:
           description: "Access token was authenticated but not authorized for this feature"
         404:
           description: "Company not found"
+          
   /company/{company_id}/user:
     get:
       tags:
@@ -560,6 +570,7 @@ paths:
           description: "Access token was not authenticated"
         403:
           description: "Access token was authenticated but not authorized for this feature"
+          
   /company/user:
     post:
       tags:
@@ -618,6 +629,7 @@ paths:
           description: "Access token was not authenticated"
         403:
           description: "Access token was authenticated but not authorized for this feature"
+          
   /company/{company_id}/group/{group_id}:
     get:
       tags:
@@ -667,6 +679,7 @@ paths:
           description: "Access token was authenticated but not authorized for this feature"
         404:
           description: "Company or group ID not found"
+          
   /company/{company_id}/group/{group_id}/member:
     get:
       tags:
@@ -697,6 +710,7 @@ paths:
           description: "Access token was authenticated but not authorized for this feature"
         404:
           description: "Company or group ID not found"
+          
   /company/{alias}/config:
     get:
       tags:
@@ -847,6 +861,7 @@ paths:
           description: "Access token was not authenticated"
         403:
           description: "Access token was authenticated but not authorized for this feature"
+          
   /course/{course_id}/approval:
     get:
       tags:
@@ -871,6 +886,7 @@ paths:
           description: "Access token was authenticated but not authorized for this feature"
         404:
           description: "Course not found"
+          
   /course/{course_id}/materials:
     get:
       tags:
@@ -893,6 +909,7 @@ paths:
           description: "Access token not authenticated"
         404:
           description: "Course not found"
+          
   /courses/company/{companyId}:
     get:
       tags:
@@ -938,6 +955,7 @@ paths:
           description: "Access token was authenticated but not authorized for this feature"
         404:
           description: "Company not found"
+          
   /curriculum/{curriculum_id}:
     get:
       tags:
@@ -960,6 +978,51 @@ paths:
           description: "Access token was not authenticated"
         403:
           description: "Access token was authenticated but not authorized for this feature"
+          
+  /enrollment/{enrollmentId}/exam-eligibility:
+    get:
+      tags:
+        - "Enrollments"
+      description: "**NOTE**:<br>**rejectReason**: If a user cannot take the exam, a constant will be provided.<br>**message**: If a reject constant has been provided, this will provide more detail as to why the user cannot take the exam."
+      summary: "Exam eligibility for user"
+      parameters:
+        - in: "path"
+          name: "enrollmentId"
+          description: ""
+          required: true
+          type: "integer"
+          pattern: '\d+'
+      responses:
+        200:
+          description: "Success"
+          schema:
+            type: "object"
+            required: 
+              - "data"
+            properties: 
+              data:
+                type: "object"
+                required: 
+                  - "canTakeExam"
+                  - "rejectReason"
+                  - "message"
+                properties: 
+                  canTakeExam: 
+                    type: "boolean"
+                    example: true
+                  rejectReason: 
+                    type: "string"
+                    example: ""
+                  message: 
+                    type: "string"
+                    example: ""
+        401:
+          description: "Access token was not authenticated"
+        403:
+          description: "Access token was authenticated but not authorized for this feature"
+        404:
+          description: "Enrollment ID not found"
+          
   /license-type:
     get:
       tags:
