--- a/cems-api.yml
+++ b/cems-api.yml
@@ -1023,6 +1023,30 @@ paths:
         404:
           description: "Enrollment ID not found"
           
+  /getUsers/{company_id}:
+    get:
+      deprecated: true
+      tags:
+        - "Company"
+      description: ""
+      summary: "Get users by company ID"
+      parameters:
+        - in: "path"
+          name: "company_id"
+          description: ""
+          required: true
+          type: "integer"
+          pattern: '\d+'
+      responses:
+        200:
+          description: "Success"
+        401:
+          description: "Access token was not authenticated"
+        403:
+          description: "Access token was authenticated but not authorized for this feature"
+        404:
+          description: "Company not found"
+          
   /license-type:
     get:
       tags:
