--- a/cems-api.yml
+++ b/cems-api.yml
@@ -1317,6 +1317,44 @@ paths:
                       example: "license_type"
         401:
           description: "Access token was not authenticated"
+   
+  /security/refresh:
+    get:
+      tags:
+        - "Security"
+      summary: "Refresh access token if not expired"
+      description: ""
+      responses:
+        200:
+          description: "Access token has been refreshed"
+          schema:
+            type: "object"
+            required: 
+              - "data"
+              - "messages"
+            properties: 
+              data: 
+                required: 
+                  - "access_token"
+                  - "refresh_token"
+                properties: 
+                  access_token: 
+                    type: "string"
+                    example: "access_token"
+                  refresh_token: 
+                    type: "string"
+                    example: "refresh_token"
+                type: "object"
+              messages: 
+                required: 
+                  - "message"
+                properties: 
+                  message: 
+                    type: "string"
+                    example: "Access token has been refreshed"
+                type: "object"
+        401:
+          description: "Refresh token has expired"
           
   /user/{userId}/license:
     post:
